--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -24,7 +24,7 @@
             android:layout_margin="5dp"
             android:ems="10"
             android:hint="Search the lang"
-            android:drawableLeft="@drawable/magnify"
+            android:drawableLeft="@drawable/ic_search_black_24dp"
             android:gravity="center" >
         </EditText>
 </android.support.v7.widget.Toolbar>
